--- a/hw8/index.html
+++ b/hw8/index.html
@@ -7,14 +7,13 @@
 </head>
 
 <body onresize="draw()">
-	<div id="buttonarea">
+	<div class="center">
 		<button onclick="add_plane()" style="background-color: #008CBA">Add Plane</button>
 		<button onclick="add_boat()" style="background-color: #008CBA">Add Boat</button>
 		<button onclick="fire()" style="background-color: #f44336">Fire on Enemy</button>
 		<button onclick="freeze()" style="background-color: #373737">Toggle Freeze</button>
 		<button onclick="nuke()" style="background-color: #f44336">Nuclear Deterrent</button>
 	</div>
-	</br>
 	<canvas id="myCanvas"></canvas>
 </body>
 
