--- a/hw10/index.html
+++ b/hw10/index.html
@@ -5,6 +5,10 @@
 
 	<title>Comp 86 – Homework 10</title>
 
+	<style type="text/css" src="main.css"></style>
+
+	<script type="text/javascript" src="https://rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
+
 	<script src="http://threejs.org/build/three.min.js"></script>
 	<script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
 	<script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script>
@@ -16,6 +20,7 @@
 	</head>
 
 	<body>
+		<div id="info">Description</div>
     	<div id="theContainer"></div>
 	</body>
 
