--- a/hw10/index.html
+++ b/hw10/index.html
@@ -20,6 +20,7 @@
 	</head>
 
 	<body>
+		<div id="instructions">Instructions: Use "wasd" to move the cubes around the screen. Use "c" to create new cubes, and "v" to delete cubes. Use "p" to create new spheres, and "l" to remove spheres.</div>
 		<div id="info">Description</div>
     	<div id="theContainer"></div>
 	</body>
