Removed Unnecessary Files

--- a/hw10/index.html
+++ b/hw10/index.html
@@ -12,14 +12,13 @@
 	<script src="http://threejs.org/build/three.min.js"></script>
 	<script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
 	<script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script>
-	<script src="js/THREEx.KeyboardState.js"></script>
-	<script src="js/THREEx.FullScreen.js"></script>
-	<script src="js/THREEx.WindowResize.js"></script>
+	<script src="THREEx.KeyboardState.js"></script>
 
 	<script type="text/javascript" src="scripts.js"></script>
 	</head>
 
 	<body>
+		<div id="instructions">Instructions: Use "wasd" to move the cubes around the screen. Use "c" to create new cubes, and "v" to delete cubes. Use "p" to create new spheres, and "l" to remove spheres.</div>
 		<div id="info">Description</div>
     	<div id="theContainer"></div>
 	</body>
